--- a/EDA_Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/EDA_Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ashishdhawas/EDA/blob/main/EDA_Hotel_Booking_Analysis_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ashishdhawas/Hotel_Booking_Analysis/blob/main/EDA_Hotel_Booking_Analysis_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -61,11 +61,25 @@
       "cell_type": "markdown",
       "source": [
         "# **Project Name**    - Capstone project(EDA)\n",
-        "**Hotel Booking Anylsis** \n",
+        "**Hotel Booking Anylsis**\n",
         "\n"
       ],
       "metadata": {
         "id": "vncDsAP0Gaoa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Project Type**    - EDA\n",
+        "##### **Contribution**    - Team\n",
+        "##### **Team Member 1 -**Ashish Ramdas Dhawas\n",
+        "##### **Team Member 2 -**Rucha Shamkant Shimpi\n",
+        "##### **Team Member 3 -**Prathamesh Vijay Thakare\n",
+        "##### **Team Member 4 -**Bhaskar Kumar"
+      ],
+      "metadata": {
+        "id": "beRrZCGUAJYm"
       }
     },
     {
@@ -195,6 +209,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **GitHub Link -**"
+      ],
+      "metadata": {
+        "id": "w6K7xa23Elo4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://github.com/ashishdhawas/Hotel_Booking_Analysis"
+      ],
+      "metadata": {
+        "id": "h1o69JH3Eqqn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Problem Statement**\n"
       ],
       "metadata": {
@@ -241,7 +273,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **General Guidelines** : -  "
+        "# **General Guidelines** : -"
       ],
       "metadata": {
         "id": "mDgbUHAGgjLW"
@@ -250,32 +282,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1.   Well-structured, formatted, and commented code is required. \n",
-        "2.   Exception Handling, Production Grade Code & Deployment Ready Code will be a plus. Those students will be awarded some additional credits. \n",
-        "     \n",
+        "1.   Well-structured, formatted, and commented code is required.\n",
+        "2.   Exception Handling, Production Grade Code & Deployment Ready Code will be a plus. Those students will be awarded some additional credits.\n",
+        "\n",
         "     The additional credits will have advantages over other students during Star Student selection.\n",
-        "       \n",
+        "\n",
         "             [ Note: - Deployment Ready Code is defined as, the whole .ipynb notebook should be executable in one go\n",
         "                       without a single error logged. ]\n",
         "\n",
         "3.   Each and every logic should have proper comments.\n",
         "4. You may add as many number of charts you want. Make Sure for each and every chart the following format should be answered.\n",
-        "        \n",
+        "\n",
         "\n",
         "```\n",
         "# Chart visualization code\n",
         "```\n",
-        "            \n",
+        "\n",
         "\n",
         "*   Why did you pick the specific chart?\n",
         "*   What is/are the insight(s) found from the chart?\n",
-        "* Will the gained insights help creating a positive business impact? \n",
+        "* Will the gained insights help creating a positive business impact?\n",
         "Are there any insights that lead to negative growth? Justify with specific reason.\n",
         "\n",
         "5. You have to create at least 20 logical & meaningful charts having important insights.\n",
         "\n",
         "\n",
-        "[ Hints : - Do the Vizualization in  a structured way while following \"UBM\" Rule. \n",
+        "[ Hints : - Do the Vizualization in  a structured way while following \"UBM\" Rule.\n",
         "\n",
         "U - Univariate Analysis,\n",
         "\n",
@@ -2186,7 +2218,7 @@
       "source": [
         "*   The dataframe contains 32 columns.\n",
         "*   Four columns have missing values.\n",
-        "*   Some columns require conversion of datatypes. \n",
+        "*   Some columns require conversion of datatypes.\n",
         "*   Additionally, new columns need to be added from existing ones to make analysis easier."
       ],
       "metadata": {
@@ -2197,7 +2229,7 @@
       "cell_type": "code",
       "source": [
         "# Let's summarize our data in a descriptive format\n",
-        "hotel_df.describe().T        # Viewing in a transpose format of descriptive data "
+        "hotel_df.describe().T        # Viewing in a transpose format of descriptive data"
       ],
       "metadata": {
         "colab": {
@@ -2645,7 +2677,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "# Missing Values/Null Values Count \n",
+        "# Missing Values/Null Values Count\n",
         "sum_null_values=hotel_df.isnull().sum().sort_values(ascending=False)\n",
         "sum_null_values[:4]"
       ],
@@ -3581,7 +3613,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Variables Description "
+        "### Variables Description"
       ],
       "metadata": {
         "id": "PBTbrJXOngz2"
@@ -4959,7 +4991,7 @@
       "source": [
         "# Adding column which shows whether reserved room type is the same as assigned room type\n",
         "\n",
-        "hotel_df['is_reserved_room_type_assigned'] = hotel_df.apply(lambda x: 'same room type assigned' if x['reserved_room_type'] == x['assigned_room_type'] \n",
+        "hotel_df['is_reserved_room_type_assigned'] = hotel_df.apply(lambda x: 'same room type assigned' if x['reserved_room_type'] == x['assigned_room_type']\n",
         "                                                                                                   else 'different room type assigned', axis=1)"
       ],
       "metadata": {
@@ -5331,7 +5363,7 @@
         "# define a function to plot a pie chart from grouped count values\n",
         "# so that it can be used in the later stages also\n",
         "\n",
-        "# get count of each unique value from a particular column \n",
+        "# get count of each unique value from a particular column\n",
         "# and output its as a dataframe\n",
         "def get_count_from_column(df, column_label):\n",
         "  df_grpd = df[column_label].value_counts()\n",
@@ -5393,7 +5425,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Number of bookings for City Hotel is 1.6 times more than that of Resort Hotel. City Hotel seems to be more preferred among travellers. "
+        "Number of bookings for City Hotel is 1.6 times more than that of Resort Hotel. City Hotel seems to be more preferred among travellers."
       ],
       "metadata": {
         "id": "C_j1G7yiqdRP"
@@ -5448,7 +5480,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Only a very small percentage (around 4%) of bookings are made by repeated guests. "
+        "Only a very small percentage (around 4%) of bookings are made by repeated guests."
       ],
       "metadata": {
         "id": "PSx9atu2YklI"
@@ -5747,7 +5779,7 @@
     {
       "cell_type": "code",
       "source": [
-        "order = ['January', 'February', 'March', 'April', 'May', 'June', \n",
+        "order = ['January', 'February', 'March', 'April', 'May', 'June',\n",
         "         'July', 'August', 'September', 'October', 'November', 'December']\n",
         "ordered_hotel_df = hotel_df[hotel_df['is_canceled'] == 'not cancelled']['arrival_date_month'].value_counts().reindex(order)\n",
         "\n",
@@ -5876,7 +5908,7 @@
         "# define a function to plot a stacked bar to show percentage of a feature in a grouped parameter\n",
         "# so that it can be used in the later stages also\n",
         "\n",
-        "# get the count of unique values in secondary column \n",
+        "# get the count of unique values in secondary column\n",
         "# segmented by each unique value in primary column\n",
         "def get_count_of_unique_values(df, pri_column_label, sec_column_label):\n",
         "  # finding unique values in secondary column for grouping\n",
@@ -5886,7 +5918,7 @@
         "  # a dataframe is created for each unique value in secondary column\n",
         "  list_of_counts_df = [df[df[sec_column_label] == value].groupby(pri_column_label)[sec_column_label].count().reset_index(name=f'{value}_count')\n",
         "                       for value in values]\n",
-        "  \n",
+        "\n",
         "  # merge all dataframes into one dataframe\n",
         "  df_merged = list_of_counts_df[0]\n",
         "  for i in range(1, len(list_of_counts_df)):\n",
@@ -5894,7 +5926,7 @@
         "\n",
         "  return df_merged\n",
         "\n",
-        "# get the % of unique values in secondary column \n",
+        "# get the % of unique values in secondary column\n",
         "# segmented by each unique value in primary column\n",
         "def get_percentage_of_unique_values(df, pri_column_label, sec_column_label):\n",
         "  # finding unique values in secondary column for grouping\n",
@@ -5902,16 +5934,16 @@
         "\n",
         "  # creating a dataframe that gives the count of each unique value in primary column\n",
         "  df_merged = get_count_of_unique_values(df, pri_column_label, sec_column_label)\n",
-        "  \n",
+        "\n",
         "  # computing the percentage of unique values in secondary column contributed by each unique value in primary column\n",
         "  df_merged['total_count'] = df_merged.sum(axis=1, numeric_only=True)\n",
         "  for value in values:\n",
         "    df_merged[f'{value}_count'] = round(df_merged[f'{value}_count'] / df_merged['total_count'] * 100)\n",
         "  df_merged.drop('total_count', axis=1, inplace=True)\n",
-        "  \n",
+        "\n",
         "  return df_merged\n",
         "\n",
-        "# plotting a stacked bar graph to represent the % of unique values in secondary column \n",
+        "# plotting a stacked bar graph to represent the % of unique values in secondary column\n",
         "# segmented by each unique value in primary column\n",
         "def stacked_bar_graph_with_percentage(df, pri_column_label, sec_column_label):\n",
         "   # computing the percentage of unique values in secondary column contributed by each unique value in primary column\n",
@@ -5926,12 +5958,12 @@
         "    label_text = str(height) + \" %\"\n",
         "    label_x = x + width / 2\n",
         "    label_y = y + height / 2\n",
-        "    ax.text(label_x, label_y, label_text, ha='center',    \n",
+        "    ax.text(label_x, label_y, label_text, ha='center',\n",
         "            va='center', fontweight='bold')\n",
         "  plt.xticks(rotation='horizontal')\n",
         "  plt.show()\n",
         "\n",
-        "# plotting a stacked bar graph to represent the count of unique values in secondary column \n",
+        "# plotting a stacked bar graph to represent the count of unique values in secondary column\n",
         "# segmented by each unique value in primary column\n",
         "def stacked_bar_graph_with_count(df, pri_column_label, sec_column_label):\n",
         "   # computing the percentage of unique values in secondary column contributed by each unique value in primary column\n",
@@ -5946,7 +5978,7 @@
         "    label_text = str(height)\n",
         "    label_x = x + width / 2\n",
         "    label_y = y + height / 2\n",
-        "    ax.text(label_x, label_y, label_text, ha='center',    \n",
+        "    ax.text(label_x, label_y, label_text, ha='center',\n",
         "            va='center', fontweight='bold')\n",
         "  plt.xticks(rotation='horizontal')\n",
         "  plt.show()"
@@ -5997,7 +6029,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The percentage of repeated guests in Resort Hotel is greater than that of City Hotel. "
+        "The percentage of repeated guests in Resort Hotel is greater than that of City Hotel."
       ],
       "metadata": {
         "id": "ngGi97qjphqQ"
@@ -6015,7 +6047,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# plot a stacked bar graph to represent the % of repeated and non-repeated \n",
+        "# plot a stacked bar graph to represent the % of repeated and non-repeated\n",
         "# bookings in each distribution channel\n",
         "stacked_bar_graph_with_percentage(hotel_df[hotel_df['distribution_channel'] != 'Undefined'], 'distribution_channel', 'is_repeated_guest')"
       ],
@@ -6289,7 +6321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 15 - Pair Plot "
+        "#### Chart - 15 - Pair Plot"
       ],
       "metadata": {
         "id": "q29F0dvdveiT"
@@ -6345,7 +6377,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### What do you suggest the client to achieve Business Objective ? \n",
+        "#### What do you suggest the client to achieve Business Objective ?\n",
         "Explain Briefly."
       ],
       "metadata": {
